# similar-sled

./: Cargo.toml  README.md  build.sh  chapters.yaml  chapters_lat.yml  config.local.yml  config.production.yml  config.staging.yml  deploy.sh  learning.local.yml  learning.production.yml  text.txt
.github/workflows/: ci.yml
Verse/: db  snap.0000000000000070
data/: chapters.yaml  draft.txt  similars copy.yaml  similars.yaml  أسمع به وأبصر.yml
data/New/: _فنجيناه.yml  ألم يروا.yml  أم بقولون افتراه.yml  إن المتقين.yml  إن في ذالك لأية.yml  اجعل هذا.yml  بما كانوا.yml  ثم أرسلنا.yml  جنات تجري تحتها.yml  جنات عدن.yml  خالدين فيها.yml  عذاب.yml  فأخذتهم الصيحة.yml  فأسر بأهلك بقطع.yml  فلا يجزى.yml  فلعلك.yml  فما اختلفوا.yml  فيما فيه يختلفون.yml  قال بما أغويتني.yml  كثير من الناس.yml  لأولي الألباب.yml  لا تحصوها.yml  لا يقدرون.yml  لقد أرسلنا من قبلك رسلا.yml  للدين حنيفا.yml  لهوا.yml  ما سبقكم.yml  من الجبال بيوتا.yml  نحن نرزقهم.yml  هذا بلاغ للناس.yml  و ترى الفلك.yml  و لإن اتبعت أهواؤهم.yml  و لله يسجد.yml  وجعلوا لله.yml  وقال اللذين أشركوا.yml  ولقد صرفنا.yml  ولوطا إذ قال.yml  وما أرسلنا قبلك.yml  ونصحت لكن.yml  ويعبدون من دون الله.yml  (+3 more)
data/hadith/: abyad ibn hamal.yml  oubey copy.yml  أبيض بن حمّال.yml
data/incomplete/: لهوا.yml  وقال اللذين أشركوا.yml
data/massanid/: toto.yml
data/need_opposites/: _أجرموا.yml  _الانبياء.yml  _رغدا.yml  _لله ملك.yml  _من الكاذبين.yml  _يصفون.yml  ألم يروا.yml  ضلال بعيد.yml
data/need_previous_next/: فسوف تعلمون.yml  فنجيناه.yml  منير.yml  (+1 more)
src/: api.rs  cors.rs  get.rs  init_db.rs  main.rs  models.rs  server.rs  utils.rs  validator.rs  xhr_guard.rs
static/: labels.json
verse_db/: db
(+465 files in other folders)
