[package]
name = "similars-sled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rocket = "0.4.11"
rocket_codegen = "0.4.11"
rocket_contrib = "0.4.11"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.97"
serde_yaml = "0.9.21"
sled = "0.34.7"
