[package]
name = "similar"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.33"
dirs = "5.0.1"
env_logger = "0.10.1"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.34"
sled = "0.34.7"
tokio = "1.35.1"
users = "0.11.0"
utc = "0.2.0"
watch = "0.2.3"
